# prts-mcp

./: .env.example  .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  ROADMAP.zh-CN.md  STATUS.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  docker-build.yml
docs/: migration-0.x-to-1.0.md
docs/dev/: STYLE.md
docs/dev/reports/: 1.5-runtime-nonfunctional-audit.md
python/: CHANGELOG.md  Dockerfile  README.md  docker-compose.override.example.yml  pyproject.toml
python/docs/: deployment.md
python/scripts/: check_package_data.py  fetch_gamedata.py
python/src/prts_mcp/: config.py  server.py
python/src/prts_mcp/api/: prts_wiki.py
python/src/prts_mcp/data/: datasets.py  enemy.py  item.py  operator.py  search.py  stage.py  stage_enemy.py  stores.py  story.py  sync.py
python/tests/: fixtures.py  test_config.py  test_dataset_specs.py  test_e2e.py  test_enemy.py  test_item.py  test_operator_data.py  test_search.py  test_server_startup_sync.py  test_stage.py  test_stage_enemy.py  test_stores.py  test_story_reader_store.py  test_sync_release.py  test_tool_surface.py
scripts/: check-runtime.ps1
ts/: CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
ts/src/: config.ts  server.ts
ts/src/api/: prtsWiki.ts
ts/src/data/: datasets.ts  enemy.ts  item.ts  operator.ts  search.ts  stage.ts  stageEnemy.ts  stores.ts  story.ts  sync.ts
ts/tests/: config.test.ts  datasets.test.ts  e2e.test.ts  enemy.test.ts  item.test.ts  operator.test.ts  search.test.ts  sessionIdleTimeout.test.ts  stage.test.ts  stageEnemy.test.ts  stores.test.ts  story.test.ts  sync.test.ts  toolSurface.test.ts  zipCache.test.ts
(+1 files in other folders)
