[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prts-mcp"
version = "1.3.1"
description = "MCP Server for Arknights PRTS Wiki & game data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "3aKHP", url = "https://github.com/3aKHP" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "arknights",
    "prts",
    "prts-wiki",
    "game-data",
    "claude",
    "anthropic",
    "fanfiction",
    "ai-agent",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/3aKHP/prts-mcp"
Repository = "https://github.com/3aKHP/prts-mcp"
Changelog = "https://github.com/3aKHP/prts-mcp/blob/main/python/CHANGELOG.md"
"Bug Tracker" = "https://github.com/3aKHP/prts-mcp/issues"

[project.scripts]
prts-mcp = "prts_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prts_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
